--- a/Day 1-2/index.html
+++ b/Day 1-2/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<link rel="stylesheet" href="/Frontend/Day1/style.css">
+<link rel="stylesheet" href="/Day1/style.css">
 </head>
 
 <body>
