--- a/Day 3-4/index.html
+++ b/Day 3-4/index.html
@@ -7,6 +7,7 @@
     <title>Newsletter Signup</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -34,6 +35,8 @@
         2025 © Aryan Sinha<sup>TM</sup>
     </footer>
     </div>
+    <script src="script.js">console.log("JavaScript is working!");
+</script>
 </body>
 
 </html>
