--- a/Day 7/index.html
+++ b/Day 7/index.html
@@ -17,9 +17,7 @@
             <button type="submit">Done</button>
         </form>
         
-        <ul id="task-list">
-
-        </ul>
+        <ul id="task-list"></ul>
     </div>
     <script src="script.js"></script>
 </body>
