Rough file created

--- a/Day 6/index.html
+++ b/Day 6/index.html
@@ -15,7 +15,7 @@
         <div class="buttons">
             <button id="increase">+</button>
             <button id="decrease">-</button>
-            <button id="reset">🔄</button>
+            <button id="reset">reset</button>
         </div>
         <p class="message" id="message"></p>
     </div>
