Day 14 (made with lvim)

--- a/Day 14/index.html
+++ b/Day 14/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
-    <link href="style.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Theme-Switcher</title>
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-  
+    <div class="container">
+      <h1>Hello World!</h1>
+      <button id="toggle-switch">Toggle Theme</button>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
