--- a/Rough/index.html
+++ b/Rough/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 id="myH1">Hello</h1>
-    <label>Username: </label>
-    <input id="name" />
-    <br /><br />
-    <button id="mysubmit">Submit</button>
-
+    <div class="container">
+      <h1>Random Number Generator</h1>
+      <label id="num"></label>
+      <button id="btn" class="buttons">Click me</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
